# WebStaticAnalyzer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  run.sh  test.sh
docs/: README.md
include/SSA/: SSA.h
include/VFG/: VFG.h
include/checkers/: CharArrayBound.h  CheckerManager.h  CompareChecker.h  LoopAnalyze.h  LoopChecker.h  SwitchChecker.h  TemplateChecker.h  ZeroChecker.h
include/framework/: ASTElement.h  ASTManager.h  Analyzer.h  BasicChecker.h  CallGraph.h  Common.h  Config.h  Logger.h
lib/: CMakeLists.txt
lib/VFG/: CMakeLists.txt  VFG.cc
lib/checkers/: CMakeLists.txt  CharArrayBound.cpp  CheckerManager.cpp  CompareChecker.cpp  LoopAnalyze.cpp  LoopChecker.cpp  SwitchChecker.cpp  TemplateChecker.cpp  ZeroChecker.cpp
lib/framework/: ASTManager.cpp  Analyzer.cpp  BasicChecker.cpp  CMakeLists.txt  CallGraph.cpp  Common.cpp  Config.cpp  Logger.cpp
tests/: README.md  astList.txt  test.txt
tests/CharArrayBound/: config.txt  example.cpp
tests/CompareChecker/: astList.txt  example.cpp  test.cpp
tests/IntegrationTest/: CharArrayBound.cpp  CompareChecker.cpp  LoopChecker.cpp  SwitchChecker.cpp  ZeroChecker.cpp  ZeroChecker2.cpp  astList.txt  config.txt  deletejson.sh  printAST.sh  run_benchmark.sh  test.sh
tests/LoopTest/: astList.txt  example.cpp
tests/SwitchChecker/: example.cpp  example.h
tests/TemplateChecker/: README.md  config.txt  example.ast  example.cpp  outTest.dot  time.txt
tests/ZeroChecker/: example.cpp
tools/: CMakeLists.txt
tools/CharArrayBound/: CMakeLists.txt  main.cpp
tools/Checker/: CMakeLists.txt  main.cpp
tools/TemplateChecker/: CMakeLists.txt  main.cpp
